<resources>
    <string name="app_name">Wallet</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="wallet">Wallet</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="total">Total</string>
    <string name="no_wallet_info">You don\'t have any wallet, please add wallet by click + button</string>
    <string name="no_transaction_info">You don\'t have any transaction, please add transaction by click + button</string>
    <string name="balance_n">Balance %s</string>
    <string name="delete">Delete</string>
    <string name="note">Note</string>
    <string name="total_balance">Total balance</string>
    <string name="pin">PIN</string>
    <string name="input_pin">Input PIN</string>
    <string name="input_password">Input password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="name_cannot_empty">Name cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="account_not_found_register"><![CDATA[Account not found? <b>Register</b>]]></string>
    <string name="register_success">Register success!</string>
    <string name="name_required">Name <font color='#FF0000'>*</font></string>
    <string name="wrong_password">Wrong password!</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_question">Are you sure to delete this account?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="update_success">Update success!</string>
    <string name="delete_account_success">Delete account success!</string>
    <string name="hi_n">Hi %s!</string>
    <string name="delete_wallet">Delete wallet</string>
    <string name="delete_wallet_question">Are you sure to delete this wallet?</string>
    <string name="delete_wallet_success">Delete wallet success!</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="show_all">Show all</string>
    <string name="from_n">From %s</string>
    <string name="until_n">Until %s</string>
    <string name="choose_your_account">Choose your account!</string>
</resources>