<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textWalletName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        app:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Konsumsi" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/title"
        app:layout_constraintTop_toBottomOf="@id/textWalletName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/buttonSymbol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="2dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/green"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="@id/layoutTotal"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutTotal"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:hint="@string/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSymbol"
        app:layout_constraintTop_toBottomOf="@id/layoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/note"
        app:layout_constraintTop_toBottomOf="@id/layoutTotal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNote"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>