<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_abstract1">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textWalletName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="32sp"
        app:fontFamily="@font/roboto_black"
        app:layout_constraintEnd_toStartOf="@+id/buttonSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Wallet 1" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/buttonSetting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginEnd="16dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/textWalletName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textWalletName"
        app:srcCompat="@drawable/ic_setting"
        app:tint="?attr/colorOnPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="1dp"
        android:text="@string/show_all"
        app:icon="@drawable/ic_calendar"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/textWalletName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalendar"
        tools:listitem="@layout/item_transaction" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textNoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/no_transaction_info"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="32sp"
        android:visibility="gone"
        app:fontFamily="@font/roboto_light"
        app:layout_constraintTop_toBottomOf="@id/buttonCalendar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textHintTotalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/total_balance"
        android:textColor="?attr/colorOnPrimary"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toTopOf="@id/textValueTotalBalance"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textValueTotalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Rp 2.381.000" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/buttonAdd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rect_10dp"
        android:backgroundTint="?attr/colorSecondary"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        app:tint="?attr/colorOnSecondary" />

</androidx.constraintlayout.widget.ConstraintLayout>